# Garlia

./: .gitignore  README.md  agenda-next.code-workspace  canciones.html  comics.html  components.json  diario.html  dibujos_rename_map.json  drawings.html  eEffect(() => {  ensayos.html  eslint.config.mjs  eslint_config.mjs  fix-imports-2.sh  fix-imports-3.sh  fix-imports-v2.sh  fix-imports.sh  globals.d.ts  index.html  jsconfig.json  knip.json  lore.html  next-sitemap.config.js  next.config.mjs  package-lock.json  package.json  postcss.config.js  proyecto.txt  remove-comments.mjs  tsconfig.json  vercel.json  web
assets/: index-3S3hr2l0.js  index-9_KNDlqN.css  index-BAPFtOwP.js  index-BBo_FOM2.css  index-BCFZusNG.js  index-BSSFXiC5.css  index-Bk2OwU9Z.js  index-BwGdcl25.css  index-C-uxDA3_.js  index-C4_T53Kd.css  index-C8LVBBO4.css  index-CJDJFiq-.css  index-CKwZvVD7.js  index-COjEJM5F.js  index-CW25UuOu.css  index-CkdC7rGO.css  index-CtKKPKi0.js  index-DKNp3uBg.js  index-DQ9SRQdf.css  index-DVtTKWio.css  index-D_TzrvUS.css  index-DgOxz-2v.css  index-DgWdFaaa.js  index-Dv74um9q.css  index-DwpAnJ4n.js  index-DyQpTse5.js  index-GUvBs30n.js  index-SjIA3105.js  (+62 more)
src-tauri/android-installer/: Cargo.toml  MANIFEST_CAMBIOS.md
src-tauri/android-installer/android/: build.gradle.kts
src-tauri/android-installer/android/src/main/java/com/frani/garlia/installer/: InstallerPlugin.kt
src-tauri/android-installer/permissions/autogenerated/: reference.md
src-tauri/android-installer/permissions/schemas/: schema.json
src-tauri/android-installer/src/: lib.rs  mobile.rs
(+1406 files in other folders)
