[package]
name = "tauri-plugin-android-installer"
version = "0.1.0"
description = "Plugin mínimo para Garlia: abre el instalador nativo de Android para un APK ya descargado."
edition = "2021"
rust-version = "1.71"
links = "tauri-plugin-android-installer"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0.0-rc.17" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc", features = ["build"] }
